[gd_scene load_steps=9 format=3]

[ext_resource type="Script" path="res://ui/views/welcome/welcome_view.gd" id="1_ekqb2"]
[ext_resource type="Texture2D" uid="uid://dj1xrh5y4wdf4" path="res://ui/icons/icon_proton_graph.svg" id="2_hyx22"]
[ext_resource type="Texture2D" uid="uid://cpvnpujov3yb6" path="res://ui/icons/icon_magnifying_glass.svg" id="3_0spty"]
[ext_resource type="Texture2D" uid="uid://cqaq3jxuddo8a" path="res://ui/icons/icon_new.svg" id="3_dsxnl"]
[ext_resource type="Texture2D" uid="uid://dqvgam553soqh" path="res://ui/icons/icon_load.svg" id="4_2ojfm"]
[ext_resource type="Script" path="res://ui/common/auto_scale.gd" id="4_4a0r6"]
[ext_resource type="Script" path="res://common/custom_types/custom_label_settings.gd" id="4_np4j7"]

[sub_resource type="LabelSettings" id="LabelSettings_w4ey2"]
font_size = 24
script = ExtResource("4_np4j7")

[node name="Welcome" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
script = ExtResource("1_ekqb2")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="AutoScaleParent" type="Node" parent="PanelContainer/MarginContainer/VBoxContainer"]
script = ExtResource("4_4a0r6")
min_size_x = false
min_size_y = false
const_separation = true

[node name="TitleBar" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 2

[node name="Icon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/TitleBar"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("2_hyx22")
expand_mode = 1
stretch_mode = 6

[node name="AutoScaleParent" type="Node" parent="PanelContainer/MarginContainer/VBoxContainer/TitleBar/Icon"]
script = ExtResource("4_4a0r6")

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TitleBar"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "ProtonGraph"
label_settings = SubResource("LabelSettings_w4ey2")

[node name="Buttons" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="AutoScaleParent" type="Node" parent="PanelContainer/MarginContainer/VBoxContainer/Buttons/VBoxContainer"]
script = ExtResource("4_4a0r6")
min_size_x = false
min_size_y = false
const_separation = true

[node name="New" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Buttons/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "New"
icon = ExtResource("3_dsxnl")
alignment = 2
expand_icon = true

[node name="AutoScaleParent" type="Node" parent="PanelContainer/MarginContainer/VBoxContainer/Buttons/VBoxContainer/New"]
script = ExtResource("4_4a0r6")

[node name="Load" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Buttons/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Load"
icon = ExtResource("4_2ojfm")
alignment = 2
expand_icon = true

[node name="AutoScaleParent" type="Node" parent="PanelContainer/MarginContainer/VBoxContainer/Buttons/VBoxContainer/Load"]
script = ExtResource("4_4a0r6")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
follow_focus = true

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="BrowseExamplesButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Browse examples projects"
icon = ExtResource("3_0spty")
expand_icon = true

[node name="AutoScaleParent" type="Node" parent="ScrollContainer/MarginContainer/VBoxContainer/BrowseExamplesButton"]
script = ExtResource("4_4a0r6")

[node name="HistoryPanel" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/HistoryPanel"]
layout_mode = 2
text = "Recent files"

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/MarginContainer/VBoxContainer/HistoryPanel"]
layout_mode = 2

[node name="FilesRoot" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/HistoryPanel"]
unique_name_in_owner = true
layout_mode = 2
